src/index.css
:root {
  --color-text: rgba(255, 255, 255, 0.87);
  --color-text-subtle: rgba(255, 255, 255, 0.5);
  --color-background: #1e212b;
  --color-primary: #912f40;
  --color-selection: #6e75a8;
}
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  color-scheme: dark light;
  color: var(--color-text);
  background-color: var(--color-background);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: unset;
  font-size: 1rem;
  line-height: 1;
  font-family: inherit;
}
html {
  font-size: 16px;
}

.visually-hidden {
  clip: rect(1px, 1px, 1px, 1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}
ol,
li {
  list-style: none;
}
button {
  padding: 0.5rem 0.5rem;
  cursor: pointer;
  background-color: var(--color-primary);
}
button,
input,
textarea {
  border-top-right-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}
input,
textarea {
  border: 0.25rem solid var(--color-primary);
  background: none;
}

::placeholder {
  color: var(--color-text-subtle);
}
.app {
  height: 100vh;
  max-height: 100vh;
  height: 100dvh;
  max-height: 100dvh;
  overflow: hidden;

  display: grid;
  grid-template-rows: auto 1fr auto;
}
.chains__content {
  max-height: 100%;
  overflow: hidden;
  display: grid;
  gap: 0.5rem;
  grid-template-rows: auto 1fr;
}
.other__content {
  display: flex;
  justify-content: center;
  max-height: 100%;
  overflow: auto;
}
.app__footer {
  display: flex;
  justify-content: space-between;
  padding: 0.5rem;
}

.app__header {
  display: flex;
  padding: 0.5rem;
}
.app__header > h1 {
  font-size: 2rem;
}
.app__header__actions {
  margin-left: auto;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}
input[type="checkbox"] {
  margin-right: 0.25rem;
}
.walk-list__container {
  overflow: scroll;
  padding-left: 0.5rem;
}
.walk-list__item[data-is-even="true"] {
  background-color: #ffffff04;
}
.walk {
  display: flex;
  gap: 0.5rem;
  font-family: monospace;
}
.walk__item {
  white-space: pre;
}
.walk__item + .walk__item::before {
  content: "🠪";
  color: var(--color-primary);
  margin-right: 0.5rem;
}
.doc-path__folder {
  color: var(--color-text-subtle);
}
.search-form {
  padding: 0 0.5rem;
  gap: 0.5rem;
  display: grid;
  grid-template-columns: minmax(0, 1fr) minmax(0, 1.5fr) minmax(0, 1fr);
}

dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.36);
  backdrop-filter: blur(2px);
}
dialog {
  margin: auto;
  background-color: transparent;
}
.alias-dialog__form {
  padding: 1rem;
  background-color: var(--color-background);
}

.alias-dialog__textarea {
  width: 72ch;
  height: 10rem;
  margin-top: 0.5rem;
  padding: 0.5rem;
  display: block;
}

.hero__container {
  display: flex;
  width: 100%;
}
.hero__button {
  margin: auto;
  font-size: 4rem;
  padding: 1rem;
}

.alias-dialog__label {
  display: block;
  margin-bottom: 1rem;
}

.alias-dialog__output-dl {
  font-family: monospace;
  padding: 0.5rem;
  display: grid;
  grid-template-columns: auto auto;
}

.search-form__search-input {
  font-size: 2rem;
  padding: 0.5rem;
  resize: none;
  --line-count: 1;
  height: calc(1.5rem + 2rem * var(--line-count));
  overflow: auto;
  max-height: calc(1.5rem + 2rem * 10);
}

.search-form__search-input:invalid {
  text-decoration: underline wavy crimson;
}

::selection {
  background-color: var(--color-selection);
}

.nav-list {
  display: flex;
  gap: 0.5rem;
}
a {
  color: inherit;
}

.nav-link {
  text-transform: capitalize;
}
.nav-link--current {
  color: var(--color-primary);
}

